Update patterns and live examples section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2018-05-22 Tue 12:41 -->
+<!-- 2018-05-22 Tue 12:56 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Lunch &amp; Learn About Accessibility</title>
@@ -235,23 +235,23 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org3976508">1. Introduction</a></li>
-<li><a href="#org9aa181d">2. Why Me, Leading This Session?</a></li>
-<li><a href="#orged5f532">3. Common Misconceptions</a></li>
-<li><a href="#orgf83b934">4. Why Should (We / You) Care?</a></li>
-<li><a href="#org1541442">5. Implementation Patterns or Live Examples</a></li>
-<li><a href="#orgcd38094">6. Conclusion</a></li>
-<li><a href="#orgd05a084">7. Next Steps Resources</a></li>
+<li><a href="#orgc92ece4">1. Introduction</a></li>
+<li><a href="#org123be6d">2. Why Me, Leading This Session?</a></li>
+<li><a href="#org2925fba">3. Common Misconceptions</a></li>
+<li><a href="#org148717f">4. Why Should (We / You) Care?</a></li>
+<li><a href="#org2b5c618">5. Implementation Patterns or Live Examples</a></li>
+<li><a href="#org9f74c6e">6. Conclusion</a></li>
+<li><a href="#org99c151f">7. Next Steps Resources</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org3976508" class="outline-2">
-<h2 id="org3976508"><span class="section-number-2">1</span> Introduction</h2>
+<div id="outline-container-orgc92ece4" class="outline-2">
+<h2 id="orgc92ece4"><span class="section-number-2">1</span> Introduction</h2>
 </div>
 
-<div id="outline-container-org9aa181d" class="outline-2">
-<h2 id="org9aa181d"><span class="section-number-2">2</span> Why Me, Leading This Session?</h2>
+<div id="outline-container-org123be6d" class="outline-2">
+<h2 id="org123be6d"><span class="section-number-2">2</span> Why Me, Leading This Session?</h2>
 <div class="outline-text-2" id="text-2">
 
 <div class="figure">
@@ -267,8 +267,8 @@ for the JavaScript code in this tag.
 </div>
 
 
-<div id="outline-container-orged5f532" class="outline-2">
-<h2 id="orged5f532"><span class="section-number-2">3</span> Common Misconceptions</h2>
+<div id="outline-container-org2925fba" class="outline-2">
+<h2 id="org2925fba"><span class="section-number-2">3</span> Common Misconceptions</h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -425,8 +425,19 @@ It is a frontend thing.
 </blockquote>
 
 <p>
-or
+To make applications accessible is cross team and multiple roles effort.
+From designers, copywritters, backend developers to support, qa testers,
+frontend developers, managers..
 </p>
+
+<p>
+<br />
+<br />
+<br />
+<br />
+<br />
+</p>
+
 
 <blockquote>
 <p>
@@ -539,8 +550,8 @@ are critical to many users.</b>
 </div>
 </div>
 
-<div id="outline-container-orgf83b934" class="outline-2">
-<h2 id="orgf83b934"><span class="section-number-2">4</span> Why Should (We / You) Care?</h2>
+<div id="outline-container-org148717f" class="outline-2">
+<h2 id="org148717f"><span class="section-number-2">4</span> Why Should (We / You) Care?</h2>
 <div class="outline-text-2" id="text-4">
 
 <div class="figure">
@@ -606,9 +617,19 @@ are critical to many users.</b>
 </div>
 </div>
 
-<div id="outline-container-org1541442" class="outline-2">
-<h2 id="org1541442"><span class="section-number-2">5</span> Implementation Patterns or Live Examples</h2>
+<div id="outline-container-org2b5c618" class="outline-2">
+<h2 id="org2b5c618"><span class="section-number-2">5</span> Implementation Patterns or Live Examples</h2>
 <div class="outline-text-2" id="text-5">
+<p>
+In land where accessibility is responsibility of everyone,
+it also crucial that somebody is primarly responsible for implementing it accross the company.
+</p>
+
+<p>
+<b>One most recurring pattern in companies that successfully implement inclusion and accessibility into
+their products is that at least one person from higher management is able put his neck into the line.</b>
+</p>
+
 <p>
 <br />
 <br />
@@ -619,8 +640,8 @@ are critical to many users.</b>
 </div>
 </div>
 
-<div id="outline-container-orgcd38094" class="outline-2">
-<h2 id="orgcd38094"><span class="section-number-2">6</span> Conclusion</h2>
+<div id="outline-container-org9f74c6e" class="outline-2">
+<h2 id="org9f74c6e"><span class="section-number-2">6</span> Conclusion</h2>
 <div class="outline-text-2" id="text-6">
 <blockquote>
 <p>
@@ -645,8 +666,8 @@ are critical to many users.</b>
 </div>
 </div>
 
-<div id="outline-container-orgd05a084" class="outline-2">
-<h2 id="orgd05a084"><span class="section-number-2">7</span> Next Steps Resources</h2>
+<div id="outline-container-org99c151f" class="outline-2">
+<h2 id="org99c151f"><span class="section-number-2">7</span> Next Steps Resources</h2>
 <div class="outline-text-2" id="text-7">
 <p>
 Free course on Udacity about accessibility
@@ -704,7 +725,7 @@ GDS Accessibility blog
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Marek</p>
-<p class="date">Created: 2018-05-22 Tue 12:41</p>
+<p class="date">Created: 2018-05-22 Tue 12:56</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
